--- a/9._Spring_Data_JPA__Entity_MySQL_(DDL)/src/main/resources/application.properties
+++ b/9._Spring_Data_JPA__Entity_MySQL_(DDL)/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#pring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?serverTimezone=CET
 spring.datasource.username=knud
