--- a/9._Spring_Data_JPA__Entity_MySQL_(DDL)/src/main/resources/application.properties
+++ b/9._Spring_Data_JPA__Entity_MySQL_(DDL)/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?serverTimezone=CET
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=KEA070986#
 
