--- a/9._Spring_Data_JPA__Entity_MySQL_(DDL)/src/main/resources/application.properties
+++ b/9._Spring_Data_JPA__Entity_MySQL_(DDL)/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?serverTimezone=CET
-spring.datasource.username=root
-spring.datasource.password=KEA070986#
+spring.datasource.username=
+spring.datasource.password=
 
